# devchain

./: README.md  pyproject.toml
devchain/: main.py
devchain_toolchains/: __init__.py  cpp.py
devchain_toolchains/data/cpp/settings/: clang14__x86_64-pc-linux-elf__release  gcc11__x86_64-pc-linux-elf__debug  gcc11__x86_64-pc-linux-elf__release
devchain_toolchains/data/cpp/template/: .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.py
devchain_toolchains/data/cpp/template/source/: CMakeLists.txt
devchain_toolchains/data/cpp/template/source/bench/: CMakeLists.txt  bench_example_lib.cpp
devchain_toolchains/data/cpp/template/source/include/cpp-example/: example_lib.hpp
devchain_toolchains/data/cpp/template/source/src/: example_lib.cpp
devchain_toolchains/data/cpp/template/source/test/: CMakeLists.txt  test_example_lib.cpp
devchain_toolchains/data/cpp/template/tools/conan/: clang14__x86_64-pc-linux-elf__debug
devchain_toolchains/utils/: types.py
tests/: test_common.py  test_cpp.py
