[tool.poetry]
name = "devchain"
version = "0.1.0"
description = "Development-Toolchain-as-a-Service"
authors = ["Günter Fischer <fischerguenter42@gmail.com>"]
readme = "README.md"
keywords = [
  'Development Environment',
  'C++ Development'
]
packages = [
  { include = "devchain" },
  { include = "devchain_toolchains" }
]

[tool.poetry.scripts]
devchain = "devchain.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
